<resources>
    <string name="text_app_name">Musik</string>
    <string name="text_search">Search</string>
    <string name="text_settings">Settings</string>
    <string name="text_exit">Exit</string>
    <string name="text_thumbnail">Thumbnail</string>
    <string name="text_max_results">Max results</string>
    <string name="text_help_max_results">Number of results to show when you search.</string>
    <string name="text_help_storage_dir">Download file will be here.</string>
    <string name="text_storage_directory">Storage directory</string>
    <string name="text_save">Save</string>
    <string name="text_todo">TODO</string>
    <string name="text_play_pause">Play/Pause</string>
    <string name="text_next">Next</string>
    <string name="text_previous">Previous</string>
    <string name="text_loop_one_or_all">Loop one/all</string>
    <string name="text_shuffle">Shuffle</string>
    <string name="text_0_00">0:00</string>
</resources>
